--- a/css/index.css
+++ b/css/index.css
@@ -184,7 +184,11 @@
   left: 0;
   color: #333;
 }
-
+.app-list{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 /*  */
 @media screen and (min-width: 700px) {
   .app-box {
